--- a/CroowdHost/.settings/org.eclipse.wst.common.component
+++ b/CroowdHost/.settings/org.eclipse.wst.common.component
@@ -9,5 +9,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="SIMbiosisSSO.war" deploy-path="/" handle="module:/resource/SIMbiosisSSO/SIMbiosisSSO">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
