--- a/CroowdHost/.settings/org.eclipse.wst.common.component
+++ b/CroowdHost/.settings/org.eclipse.wst.common.component
@@ -13,5 +13,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="CroowdResources.war" deploy-path="/" handle="module:/resource/CroowdResources/CroowdResources">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
