--- a/CroowdHost/.settings/org.eclipse.wst.common.component
+++ b/CroowdHost/.settings/org.eclipse.wst.common.component
@@ -13,7 +13,7 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CroowdResources.war" deploy-path="/" handle="module:/resource/CroowdResources/CroowdResources">
+        <dependent-module archiveName="CroowdResourceWar.war" deploy-path="/" handle="module:/resource/CroowdResourceWar/CroowdResourceWar">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
